trace kafka with log - (#401)
* add log consumed and log produced
* add separate log level for custom logging
