# apps/hops-api/.config/web/openapi.yaml
@@ -4,19 +4,19 @@ info:
   title: NAV Helseopplysninger
   description: REST API for NAV Helseopplysninger for eksterne konsumenter.
 paths:
-  /isReady:
+  /actuator/ready:
     get:
       tags: [diagnostics]
       responses:
         '200':
           description: Service is ready.
-  /isAlive:
+  /actuator/live:
     get:
       tags: [diagnostics]
       responses:
         '200':
           description: Service is alive.
-  /prometheus:
+  /metrics:
     get:
       tags: [diagnostics]
       responses:
